feat(schedule): allow to publish speakers and sessions without the schedule (#269)
After publication of the speakers, we can now thanks to this modification add speakers & sessions to firebase without schedule. This allow a simple communication without adding a fake schedule.

--- a/src/elements/speaker-details.html
+++ b/src/elements/speaker-details.html
@@ -84,8 +84,7 @@
                     characters="220"
                     break-last-word
                   ></truncate-marked-text>
-                  <a class="read-more" href$="/schedule/day[[session.day]]?sessionId=[[session.id]]" dialog-dismiss>{$ readMore $}</a>
-
+                  <a class="read-more" hidden$="{{!session.day}}" href$="/schedule/day[[session.day]]?sessionId=[[session.id]]" dialog-dismiss>{$ readMore $}</a>
                 </div>
               </div>
             </template>
@@ -170,9 +169,7 @@
             Polymer.IronDropdownScrollManager.removeScrollLock(this.$.scrollHeaderPanel);
             this._finishRenderClosed();
           }
-
         }
-
       });
 
     }());
