Disable video and photo sections depending on config files (#267)
* [#95] Hide call to action if not defined

https://github.com/gdg-x/hoverboard/issues/95

Hide callToAction template if callToAction is not defined in resources.

* [#95] Hide video in header if not set in config

https://github.com/gdg-x/hoverboard/issues/95

Hide playVideo action in main page header if video is not defined in
data/hoverboard.config.json

* [#95] Hide photo gallery block if not configured

https://github.com/gdg-x/hoverboard/issues/95

Hide photo-block template completely if gallery is not configured in
data/hoverboard.config.json

* [#95] Hide featuredVideos depending on config

https://github.com/gdg-x/hoverboard/issues/95

- Hide featured videos slider if no videos provided by firebase or
whatever
- Hide link to all videos playlist if no link is defined in
data/hoverboard.config.json

* [#95] Make call-to-action import conditional

https://github.com/gdg-x/hoverboard/issues/95

As requested, import call-to-action only if it is required by
configuration files

* [#95] Make photo-block import conditional

https://github.com/gdg-x/hoverboard/issues/95

As requested import photo-block component only if required by
configuration

* [#95] Move featuredVideos display logic to higher level

https://github.com/gdg-x/hoverboad/issues/95

As discussed with @ozasadnyy featuredVideos block should not be
displayed at all if there is no videosSessionsUrl value in the
configuration.

* [#95] Save network if videos not displayed

https://github.com/gdg-x/hoverboard/issues/95

Do not query firebase and indexeddb for videos if featuredVideos block
is not be displayed.

--- a/src/elements/app-data.html
+++ b/src/elements/app-data.html
@@ -63,19 +63,22 @@
       persisted-data="{{app.partners}}">
     </app-indexeddb-mirror>
 
-    <firebase-document
-      id="queryVideos"
-      app-name="{$ firebase.name $}"
-      path="/videos"
-      data="{{_firebaseVideos}}">
-    </firebase-document>
+    <!-- Save requests if we do not display videos -->
+    {% if videosSessionsUrl %}
+      <firebase-document
+        id="queryVideos"
+        app-name="{$ firebase.name $}"
+        path="/videos"
+        data="{{_firebaseVideos}}">
+      </firebase-document>
 
-    <app-indexeddb-mirror
-      session="{$ firebase.indexedDbSession $}"
-      key="videos"
-      data="{{_firebaseVideos}}"
-      persisted-data="{{app.videos}}">
-    </app-indexeddb-mirror>
+      <app-indexeddb-mirror
+        session="{$ firebase.indexedDbSession $}"
+        key="videos"
+        data="{{_firebaseVideos}}"
+        persisted-data="{{app.videos}}">
+      </app-indexeddb-mirror>
+    {% endif %}
 
     <firebase-query
       id="queryTeam"
