--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -4,13 +4,19 @@
 <link rel="import" href="../behaviors/page-behavior.html">
 <link rel="import" href="../elements/statistics-block.html">
 <link rel="import" href="../elements/featured-people.html">
-<link rel="import" href="../elements/featured-videos.html">
-<link rel="import" href="../elements/call-to-action.html">
+{% if videosSessionsUrl %}
+  <link rel="import" href="../elements/featured-videos.html">
+{% endif %}
+{% if callToAction %}
+  <link rel="import" href="../elements/call-to-action.html">
+{% endif %}
 <link rel="import" href="../elements/about-block.html">
 <link rel="import" href="../elements/tickets-block.html">
 <link rel="import" href="../elements/latest-posts.html">
 <link rel="import" href="../elements/footer-block.html">
-<link rel="import" href="../elements/photo-block.html">
+{% if gallery %}
+  <link rel="import" href="../elements/photo-block.html">
+{% endif %}
 <link rel="import" href="../elements/social-feed.html">
 <link rel="import" href="../elements/logos-block.html">
 <link rel="import" href="../elements/map-block.html">
@@ -22,10 +28,16 @@
 
     <statistics-block app="{{app}}" cascaded></statistics-block>
     <featured-people app="{{app}}" people="{{people}}" cascaded></featured-people>
-    <featured-videos app="{{app}}" cascaded></featured-videos>
-    <call-to-action app="{{app}}" cascaded></call-to-action>
+    {% if videosSessionsUrl %}
+      <featured-videos app="{{app}}" cascaded></featured-videos>
+    {% endif %}
+    {% if callToAction %}
+      <call-to-action app="{{app}}" cascaded></call-to-action>
+    {% endif %}
     <about-block app="{{app}}" cascaded></about-block>
-    <photo-block app="{{app}}" cascaded></photo-block>
+    {% if gallery %}
+      <photo-block app="{{app}}" cascaded></photo-block>
+    {% endif %}
     <tickets-block app="{{app}}" cascaded></tickets-block>
     <latest-posts app="{{app}}" posts="{{posts}}" cascaded></latest-posts>
     <social-feed app="{{app}}" cascaded></social-feed>
